tests RaportService