@@ -1,6 +1,5 @@
 package pl.pawc.ewi.service;
 
-import com.google.common.collect.Lists;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import pl.pawc.ewi.entity.Dokument;
@@ -14,7 +13,6 @@ import pl.pawc.ewi.model.Raport;
 import pl.pawc.ewi.model.RaportKilometry;
 import pl.pawc.ewi.model.RaportRoczny;
 import pl.pawc.ewi.repository.DokumentRepository;
-import pl.pawc.ewi.repository.KategoriaRepository;
 import pl.pawc.ewi.repository.KilometryRepository;
 import pl.pawc.ewi.repository.NormaRepository;
 import pl.pawc.ewi.repository.StanRepository;
@@ -27,8 +25,6 @@ import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.groupingBy;
 
@@ -38,7 +34,7 @@ public class RaportService {
 
     private final KilometryRepository kilometryRepository;
     private final MaszynaService maszynaService;
-    private final KategoriaRepository kategoriaRepository;
+    private final KategoriaService kategoriaService;
     private final ZuzycieService zuzycieService;
     private final StanRepository stanRepository;
     private final DokumentRepository dokumentRepository;
@@ -55,12 +51,8 @@ public class RaportService {
             raportKilometry.setMaszynaid(m.getId());
             raportKilometry.setMaszynanazwa(m.getNazwa());
             Kilometry oneByMaszynaAndRokAndMiesiac = kilometryRepository.findOneByMaszynaAndRokAndMiesiac(m, rok, miesiac);
-            if (oneByMaszynaAndRokAndMiesiac == null){
-                raportKilometry.setStanpoczatkowy(BigDecimal.ZERO);
-            }
-            else{
-                raportKilometry.setStanpoczatkowy(oneByMaszynaAndRokAndMiesiac.getWartosc());
-            }
+            if (oneByMaszynaAndRokAndMiesiac == null) raportKilometry.setStanpoczatkowy(BigDecimal.ZERO);
+            else raportKilometry.setStanpoczatkowy(oneByMaszynaAndRokAndMiesiac.getWartosc());
             result.add(raportKilometry);
         });
 
@@ -69,40 +61,8 @@ public class RaportService {
     }
 
     public List<RaportRoczny> getRaportRoczny(int year){
-        List<RaportRoczny> result = new ArrayList<>();
-
-        Iterable<Kategoria> kategorieI = kategoriaRepository.findAll();
-        List<Kategoria> kategorie = Lists.newArrayList(kategorieI);
-
-        kategorie.forEach(k -> k.getMaszyny().forEach(m -> {
-
-            List<Norma> normyByMaszyna = normaRepository.findByMaszyna(m);
-
-            normyByMaszyna.forEach(n -> {
-
-                RaportRoczny raportRoczny = new RaportRoczny();
-
-                String jednostka = n.getJednostkaObj() == null ? n.getJednostka() : n.getJednostkaObj().getNazwa();
-                BigDecimal waga = n.getJednostkaObj() == null ? BigDecimal.ONE : n.getJednostkaObj().getWaga();
-
-                String kategoria_jednostka =
-                        new StringBuilder(k.getNazwa()).append("-").append(jednostka).toString();
-                raportRoczny.setKategoria_jednostka(kategoria_jednostka.toUpperCase());
-
-                raportRoczny.setKategoria(k.getNazwa());
-                raportRoczny.setJednostka(jednostka);
-                raportRoczny.setWaga(waga);
-
-                BigDecimal sumaYear = zuzycieService.getSumaYear(n.getId(), year);
-                raportRoczny.setSuma(sumaYear);
-
-                result.add(raportRoczny);
-
-            });
-        }));
-
+        List<RaportRoczny> result = getMaszynaNormaUngrouped(year);
         Map<String, List<RaportRoczny>> collect = result.stream().collect(groupingBy(RaportRoczny::getKategoria_jednostka));
-
         List<RaportRoczny> groupBy = new ArrayList<>();
 
         collect.forEach((s, lista) -> {
@@ -110,7 +70,6 @@ public class RaportService {
             if(BigDecimal.ZERO.equals(sum)) return;
 
             RaportRoczny raportRoczny = new RaportRoczny();
-
             raportRoczny.setKategoria_jednostka(s);
             raportRoczny.setKategoria(lista.get(0).getKategoria());
             raportRoczny.setJednostka(lista.get(0).getJednostka());
@@ -125,6 +84,37 @@ public class RaportService {
         });
 
         return groupBy;
+    }
+
+    private List<RaportRoczny> getMaszynaNormaUngrouped(int year) {
+        List<RaportRoczny> result = new ArrayList<>();
+
+        for (Kategoria k : kategoriaService.findAll()) {
+            for (Maszyna m : k.getMaszyny()) {
+                normaRepository.findByMaszyna(m).forEach(n -> getRaportRocznyNormaByMaszyna(year, result, k, n));
+            }
+        }
+        return result;
+    }
+
+    private void getRaportRocznyNormaByMaszyna(int year, List<RaportRoczny> result, Kategoria k, Norma n) {
+        RaportRoczny raportRoczny = new RaportRoczny();
+
+        String jednostka = n.getJednostkaObj() == null ? n.getJednostka() : n.getJednostkaObj().getNazwa();
+        BigDecimal waga = n.getJednostkaObj() == null ? BigDecimal.ONE : n.getJednostkaObj().getWaga();
+
+        String kategoria_jednostka =
+                new StringBuilder(k.getNazwa()).append("-").append(jednostka).toString();
+        raportRoczny.setKategoria_jednostka(kategoria_jednostka.toUpperCase());
+
+        raportRoczny.setKategoria(k.getNazwa());
+        raportRoczny.setJednostka(jednostka);
+        raportRoczny.setWaga(waga);
+
+        BigDecimal sumaYear = zuzycieService.getSumaYear(n.getId(), year);
+        raportRoczny.setSuma(sumaYear);
+
+        result.add(raportRoczny);
     }
 
     public List<Raport> getRaport(int year, int month, boolean isQuarterly) {
@@ -146,8 +136,7 @@ public class RaportService {
 
         for (Norma norma : normy) {
 
-            Stream<Dokument> dokumentStream = dokumentsByDataBetween.stream().filter(d -> d.getMaszyna().equals(norma.getMaszyna()));
-            List<Dokument> dokumentList = dokumentStream.collect(Collectors.toList());
+            List<Dokument> dokumentList  = dokumentsByDataBetween.stream().filter(d -> d.getMaszyna().equals(norma.getMaszyna())).toList();
             if(dokumentList.size() == 0) continue;
 
             int scale = norma.isCzyZaokr1setna() ? 2 : 1;
